workshop03/mydb.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: myapp-db
  namespace: myns
  labels:
    app: myapp
    version: v1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-db
      version: v1
  template:
    metadata:
      name: myapp-db
      labels:
        app: myapp-db
        version: v1
    spec:
      containers:
      - name: myapp-db
        image: stackupiss/northwind-db:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
  namespace: myns
  labels:
    app: mydb-svc
spec:
  type: ClusterIP
  selector:
    app: myapp-db
  ports:
  - port: 3306
    targetPort: 3306
