workshop03/myingress-host.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: myapp-ing
  namespace: myns
  labels:
    name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths: 
      - path: /
        host: myapp.com
        backend:
          serviceName: myapp-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
